# Polarust

./: Cargo.toml  README.md
src/: enricher.rs  generator.rs  main.rs  model.rs  parser.rs
src/assets/: gallery.html  index.html  step.html  style.css  trip.html  trip.js  trips.html
