[package]
name = "polarust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
fs_extra = "1"
minijinja = { version = "2", features = ["loader"] }
turbojpeg = { version = "1", features = ["image"] }
image = "0.25"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.18.4"
ureq = "3.3.0"
